test/functions/iterators/bradc/onInIterator-local.skipif
CHPL_COMM!=none
CHPL_TEST_NO_LOCAL == true
